# bucket-program

./: .eslint.json  .eslintignore  .eslintrc.js  .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
app/: .eslintrc  README.md  package.json
app/public/: bucket_program.json
app/src/: manifest.json
app/src/components/: Balance.tsx
app/src/constants/: index.ts
app/src/pages/: _app.tsx  _document.js  index.tsx
cli/: README  package.json
cli/src/: bucket-cli.ts  tsconfig.json
programs/bucket-program/: Cargo.toml
programs/bucket-program/src/: constant.rs  context.rs  error.rs  lib.rs  util.rs
programs/bucket-program/src/instructions/: authorize_collateral.rs  create_bucket.rs  deposit.rs  mod.rs  pyth_client.rs  rebalance.rs  redeem.rs  remove_collateral.rs  set_collateral_allocations.rs  update_rebalance_authority.rs  withdraw.rs
programs/bucket-program/src/math/: casting.rs  mod.rs
programs/bucket-program/src/state/: addresses.rs  bucket.rs  issue_authority.rs  mod.rs  withdraw_authority.rs
programs/bucket-program/src/state/oracle/: mod.rs  pyth.rs  switchboard.rs
scripts/: cp_idl.sh  deploy.sh  get_pk.sh  setup.sh
sdk/: package.json  tsconfig.json
sdk/src/: bucket.ts  index.ts
src/: bucket.ts  index.ts
src/common/: account-utils.ts  account_utils.ts  node-wallet.ts  token.ts  types.ts  util.ts
src/types/: bucket_program.ts
tests/: bucket-program.js  bucket-program.ts  bucket_dao.json  deposit-redeem-flow.ts  modify-collateral.test.ts  rebalance.test.ts
tests/common/: testHelpers.ts  util.ts
(+35 files in other folders)
