[package]
name = "bucket-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bucket_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
crate-token = { version = "0.4.1", features = ["cpi"] }
crate-redeem-in-kind = { version = "0.4.1", features = ["cpi"] }
vipers = "1.5.9"
num-traits = "0.2"
